@@ -1,0 +1,2 @@
+[warning]
+cp-library-deconstruction-planners-support=[color=yellow][WARNING][/color] Destruction planners from library remove all unapproved ghosts in the selected area.
